# quantumlauncher

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TUI_PR_Description.md  book.toml  cargo_check.txt  cargo_check_full.txt  cargo_check_visible.txt  cargo_check_visible2.txt  config.json  mise.toml  quantum_launcher.spec  rust-toolchain.toml
.github/workflows/: basic-ci.yml  build-appimage.yml  build-deb.yml  build-macos.yml  buld-pkg-macos.yml  clippy.yml  release.yml
assets/: README.md
assets/freedesktop/: Info.plist  quantum-launcher.metainfo.xml
assets/freedesktop/debian/: control
assets/installers/neoforge/: NeoForgeInstaller.java
assets/macos/: Installer.dist  welcome.html
changelogs/: 0.4.3.md  0.5.1.md  unreleased.md
crates/ezshortcut/: Cargo.toml
crates/ezshortcut/src/: lib.rs
crates/ezshortcut/src/os/: macos.rs  unix.rs
crates/ezshortcut/src/os/windows/: comguard.rs  mod.rs
crates/ql_auth/: Cargo.toml
crates/ql_auth/src/: alt.rs  encrypted_store.rs  lib.rs  ms.rs  token_store.rs
crates/ql_auth/src/yggdrasil/: mod.rs  oauth.rs
crates/ql_core/: Cargo.toml
crates/ql_core/src/: clean.rs  constants.rs  error.rs  file_utils.rs  lib.rs  loader.rs  print.rs  progress.rs  read_log.rs  request.rs  saves.rs  structs.rs  urlcache.rs
crates/ql_core/src/jarmod/: json.rs  mod.rs
crates/ql_core/src/json/: asset_index.rs  fabric.rs  instance_config.rs  lwjgl.rs  manifest.rs  mod.rs  version.rs
crates/ql_core/src/print/: macros.rs  mod.rs
crates/ql_instances/: Cargo.toml
crates/ql_instances/src/: launcher_update_detector.rs  lib.rs
crates/ql_instances/src/auth/: alt.rs  authlib.rs  encrypted_store.rs  mod.rs  ms.rs  token_store.rs
crates/ql_instances/src/auth/blessing_skin/: mod.rs
crates/ql_instances/src/auth/elyby/: mod.rs
crates/ql_instances/src/auth/littleskin/: authlib.rs  error.rs  mod.rs  oauth.rs
crates/ql_instances/src/auth/yggdrasil/: mod.rs  oauth.rs
crates/ql_instances/src/download/: downloader.rs  libraries.rs  mod.rs
crates/ql_instances/src/instance/: list_versions.rs  migrate.rs  mod.rs
crates/ql_instances/src/instance/launch/: error.rs  launcher.rs  mod.rs
crates/ql_java_handler/: Cargo.toml
crates/ql_java_handler/src/: alternate_java.rs  compression.rs  lib.rs
crates/ql_java_handler/src/json/: list.rs
crates/ql_mod_manager/: Cargo.toml
crates/ql_mod_manager/src/: lib.rs  rate_limiter.rs
crates/ql_mod_manager/src/loaders/: mod.rs  neoforge.rs  optifine.rs  paper.rs
crates/ql_mod_manager/src/presets/: mod.rs
crates/ql_mod_manager/src/store/: add_file.rs  delete.rs  error.rs  id.rs  image.rs  local_json.rs  mod.rs  recommended.rs  toggle.rs  types.rs  update.rs
crates/ql_packager/: Cargo.toml
crates/ql_packager/src/: export.rs  import.rs  lib.rs  multimc.rs
crates/ql_packager/src/multimc/: export.rs  import.rs  mod.rs  types.rs
crates/ql_servers/: Cargo.toml
crates/ql_servers/src/: create.rs  lib.rs  list_versions.rs  run.rs  server_properties.rs
crates/qlg_core/: Cargo.toml  README.md
crates/qlg_core/examples/: README.md  account_management.rs  account_managment.rs  elyby_example.rs  littleskin_example.rs  management_example.rs  microsoft_example.rs  offline_example.rs  overview.rs  security_demo.rs  usage.rs
crates/qlg_core/src/: lib.rs
crates/qlg_core/src/account_management/: errors.rs  manager.rs  mod.rs  traits.rs  types.rs
crates/qlg_core/src/account_management/providers/: elyby.rs  littleskin.rs  microsoft.rs  mod.rs  offline.rs
crates/qlg_core/tests/: integration_tests.rs  security_tests.rs
docs/: COMMUNITY_FIXES.md  PORTABLE_MODE.md  ROADMAP.md  SUMMARY.md  book.toml  community-fixes.md
docs/building/: BASICS.md  basic.md
docs/docs/building/: BASICS.md
docs/ql_mdbook/: book.toml
docs/ql_mdbook/src/: SUMMARY.md  chapter_1.md  chapter_2.md  chapter_3.md  community-fixes.md
quantum_launcher/: Cargo.toml  build.rs  quantum-launcher.desktop
quantum_launcher/src/: config.rs  icon_manager.rs  icons.rs  launcher_update.rs  main.rs  mclog_upload.rs  mods_store.rs  presence_utils.rs  tick.rs  update.rs  view.rs
quantum_launcher/src/cli/: account.rs  command.rs  helpers.rs  mod.rs
quantum_launcher/src/config/: discord_rpc.rs  mod.rs
quantum_launcher/src/menu_renderer/: cargo_check.txt  create.rs  edit_instance.rs  edit_lwjgl.rs  launch.rs  log.rs  login.rs  mod.rs  settings.rs  shortcuts.rs  ui.rs
quantum_launcher/src/message_handler/: arrow_keys.rs  iced_event.rs  mod.rs
quantum_launcher/src/message_update/: accounts.rs  create_instance.rs  discord_rpc.rs  edit_instance.rs  edit_lwjgl.rs  launch.rs  main_menu.rs  manage_mods.rs  mod.rs  mod_store.rs  presets.rs  recommended.rs  shortcuts.rs  token.rs  token_password.rs
quantum_launcher/src/state/: images.rs  menu.rs  message.rs  mod.rs
quantum_launcher/src/stylesheet/: color.rs  styles.rs  widgets.rs
quantum_launcher/src/tui/: app.rs  mod.rs  ui.rs  ui_backup.rs  ui_clean.rs  ui_new.rs  ui_old.rs
scripts/: README.md  sequoia_arm64_build.sh
tests/: .gitignore  Cargo.toml  README.md  __main__.py  create.py  launch.py  procs.py  type.py
tests/.history/: .gitignore_20250801211642  __main___20250801211940.py  __main___20250801212132.py  __main___20250801233424.py  create_20250801210808.py  create_20250801212112.py  create_20250801212114.py  create_20250801212531.py  create_20250801233354.py  launch_20250801211407.py  launch_20250801211411.py  launch_20250801233503.py  launch_20250801233510.py  launch_20250801233610.py  procs_20250801233910.py  procs_20250801234038.py  procs_20250801234104.py  procs_20250801234200.py  procs_20250801234229.py  procs_20250801234246.py
tests/src/: launch.rs  main.rs  version.rs
tests/src/search/: macos.rs  unix.rs  windows.rs
(+81 files in other folders)
