[package]
name = "ql_auth"
version = "0.0.0"
edition = "2021"

[dependencies]
ql_core.path = "../ql_core"

thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
owo-colors.workspace = true

urlencoding = "2"

# For generating keys
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "vendored"] }
[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "linux")))'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }
